# otobun

./: .gitignore  AGENTS.md  Cargo.toml  README.md  biome.json  package.json  pnpm-lock.yaml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: app.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: app-sidebar.tsx  audio-waveform-player.tsx  hero-card.tsx  preview-card.tsx  transcript-form.tsx
apps/desktop/src/components/transcribe/: transcribe-progress-screen.tsx  transcribe-workspace.tsx
apps/desktop/src/components/transcript-form/: helpers.ts  library-panel.tsx  model-manager-panel.tsx  panel-header.tsx  permissions-panel.tsx  settings-panel.tsx  transcribe-action-footer.tsx  transcribe-model-panel.tsx  transcribe-options-panel.tsx  transcribe-output-panel.tsx  (+1 more)
apps/desktop/src/constants/: index.ts
apps/desktop/src/hooks/: use-engine-status.ts  use-installed-models.ts  use-media-preview.ts  use-model-preference.ts  use-transcription-job.ts
apps/desktop/src/types/: index.ts
apps/desktop/src/utils/: paths.ts
assets/brand/: README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: export.rs  lib.rs  transcribe.rs  transcript.rs
docs/: architecture.md  product-brief.md  roadmap.md  ui-contract.md  ui-qa-checklist.md  ui-revamp-plan.md
scripts/: install-desktop.mjs
(+5 files in other folders)
