[workspace]
members = ["crates/core", "crates/cli", "apps/desktop/src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/mahirocoko/otobun"

[workspace.dependencies]
otobun-core = { path = "crates/core" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
clap = { version = "4.5.7", features = ["derive", "env"] }
